--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^4.0.4
   provider: ^6.0.1
+  flutter_svg: ^1.0.0
+  shimmer: ^2.0.0
+  shared_preferences: ^2.0.9
 
 dev_dependencies:
   flutter_test:
@@ -60,9 +63,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/fonts/
+     - assets/svg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -75,11 +78,21 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+     - family: Roboto
+       fonts:
+        - asset: assets/fonts/roboto_thin.ttf
+          weight: 100
+        - asset: assets/fonts/roboto_light.ttf
+          weight: 300
+        - asset: assets/fonts/roboto_regular.ttf
+          weight: 400
+        - asset: assets/fonts/roboto_medium.ttf
+          weight: 500
+        - asset: assets/fonts/roboto_bold.ttf
+          weight: 700
+        - asset: assets/fonts/roboto_black.ttf
+          weight: 900
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
