--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_svg: ^1.0.0
   shimmer: ^2.0.0
   shared_preferences: ^2.0.9
+  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_test:
