--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shimmer: ^2.0.0
   shared_preferences: ^2.0.9
   fluttertoast: ^8.0.8
+  image_picker: ^0.8.4+4
 
 dev_dependencies:
   flutter_test:
